--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="container">
         <a href="#" class="logo">
           <img
-            src="./assets/images/logo.svg"
+            src="./assets/images/logotipo.png"
             width="160"
             height="50"
             alt="Grilli - Home"
@@ -119,7 +119,7 @@
 
           <a href="#" class="logo">
             <img
-              src="./assets/images/logo.svg"
+              src="./assets/images/logotipo.png"
               width="160"
               height="50"
               alt="Grilli - Home"
@@ -378,7 +378,7 @@
                       style="--width: 285; --height: 336"
                     >
                       <img
-                        src="./assets/images/service-1.jpg"
+                        src="./assets/images/plato4.jpeg"
                         width="285"
                         height="336"
                         loading="lazy"
@@ -390,7 +390,7 @@
 
                   <div class="card-content">
                     <h3 class="title-4 card-title">
-                      <a href="#menu">Desayunos</a>
+                      <a href="#menu">Almuerzos</a>
                     </h3>
 
                     <a href="#menu" class="btn-text hover-underline label-2"
@@ -408,7 +408,7 @@
                       style="--width: 285; --height: 336"
                     >
                       <img
-                        src="./assets/images/service-2.jpg"
+                        src="./assets/images/aperitivo.jpeg"
                         width="285"
                         height="336"
                         loading="lazy"
@@ -438,7 +438,7 @@
                       style="--width: 285; --height: 336"
                     >
                       <img
-                        src="./assets/images/service-3.jpg"
+                        src="./assets/images/trago.jpeg"
                         width="285"
                         height="336"
                         loading="lazy"
@@ -518,7 +518,7 @@
 
             <figure class="about-banner">
               <img
-                src="./assets/images/about-banner.jpg"
+                src="./assets/images/plato6.jpeg"
                 width="570"
                 height="570"
                 loading="lazy"
@@ -534,7 +534,7 @@
                 data-parallax-speed="1.75"
               >
                 <img
-                  src="./assets/images/about-abs-image.jpg"
+                  src="./assets/images/plato1.png"
                   width="285"
                   height="285"
                   loading="lazy"
@@ -545,7 +545,7 @@
 
               <div class="abs-img abs-img-2 has-before">
                 <img
-                  src="./assets/images/badge-2.png"
+                  src="./assets/images/logotipo.png"
                   width="133"
                   height="134"
                   loading="lazy"
@@ -572,7 +572,7 @@
         <section class="special-dish text-center" aria-labelledby="dish-label">
           <div class="special-dish-banner">
             <img
-              src="./assets/images/special-dish-banner.jpg"
+              src="./assets/images/low.jpeg"
               width="940"
               height="900"
               loading="lazy"
@@ -594,13 +594,10 @@
 
               <p class="section-subtitle label-2">Plato especial</p>
 
-              <h2 class="headline-1 section-title">Langosta Tortellini</h2>
+              <h2 class="headline-1 section-title">low mein</h2>
 
               <p class="section-text">
-                Estamos orgullosos de presentar nuestro platillo estrella: el
-                Langosta Tortellini. Este manjar exquisito está diseñado para
-                deleitar los paladares más exigentes y hacer de cada comida una
-                ocasión especial.
+                Estamos orgullosos de presentar nuestro platillo estrella: El low mein es un plato tradicional de la cocina china que consiste en fideos de trigo salteados con una variedad de ingredientes como verduras, proteínas y salsa. El término "mein" se refiere a los fideos, y "low mein" específicamente se traduce como "fideos mezclados" o "fideos revueltos"
               </p>
 
               <div class="wrapper">
@@ -885,7 +882,7 @@
         <section
         id="chefs"
           class="section testi text-center has-bg-image"
-          style="background-image: url('./assets/images/testimonial-bg.jpg')"
+          style="background-image: url('./assets/images/testimonios.png')"
           aria-label="testimonials"
         >
           <div class="container">
@@ -1299,7 +1296,7 @@
           <div class="footer-brand has-before has-after">
             <a href="#" class="logo">
               <img
-                src="./assets/images/logo.svg"
+                src="./assets/images/logotipo.png"
                 width="160"
                 height="50"
                 loading="lazy"
